--- a/public/styleSheet/views-styleSheets/home.css
+++ b/public/styleSheet/views-styleSheets/home.css
@@ -162,7 +162,7 @@ body{
     box-shadow: 0px 15px 15px rgba(0,0,0,0.3);
 }
 .content-info{
-    display: none;
+    display: flex;
     flex-direction: column;
     gap: 30px;
     width: 100%;
